fixed .speedup_imgs problem on smaller screens

--- a/style.css
+++ b/style.css
@@ -697,6 +697,7 @@ span.extra_border {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  /* overflow: hidden; */
 }
 
 .fleet_grid {
@@ -719,6 +720,8 @@ span.extra_border {
 }
 
 .fleet_grid:nth-child(5) img {
+  width: 100%;
+  height: 100%;
   opacity: .2;
   filter: grayscale(1);
 }
@@ -758,6 +761,7 @@ h3 {
   margin-bottom: 1em;
   font-size: 1.70vw;
   letter-spacing: 2px;
+  line-height: 150%;
   background: -webkit-linear-gradient(#f3f3f3, #acacac);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -771,4 +775,15 @@ aside {
   font-size: 23px;
   letter-spacing: 2px;
   line-height: 150%;
+}
+
+@media only screen and (max-width: 1600px) {
+
+  .speedup_txt {
+    font-size: 20px;
+  }
+
+  .caption {
+    font-size: 17px;
+  }
 }
